attempt to fix padding on mobile

--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -848,9 +848,9 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.py-24 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+.py-32 {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
 }
 
 .pb-3 {
